@@ -1,5 +1,5 @@
 PRJ_VER=0.7.995
-SUMMARY= Fixed Bug 733540, 738958
+SUMMARY= Fixed Bug 733540, 738958; Renamed UseUninstall to ManageUninstall; Revised Zanata support
 BODHI_UPDATE_TYPE=bugfix
 REDHAT_BUGZILLA=733540, 738958
 [Changes]
@@ -10,5 +10,8 @@ REDHAT_BUGZILLA=733540, 738958
     end of string. The string will not be changed otherwise.
 - UseUninstall has renamed as ManageUninstall
 - ManageMaintainerTargets: Reveal MAINTAINER_UPLOAD_COMMAND
+- ManageTranslation: Adopt zanata python client 1.3, arguments are redesigned.
+  + Add argument: ALL_FOR_PUSH, ALL_FOR_PUSH_TRANS and ALL_FOR_PULL
+  + Add argument: OPTIONS for passing arguments.
 
 
